fix: color from #1a1a26  to #000 for contrast correction

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -63,7 +63,7 @@ button:hover {
   box-shadow: 0px 0px 8px var(--primary-color);
   border-radius: 0.5rem;
   padding: 1rem 1rem;
-  color: #1a1a26;
+  color: #000;
 }
 .card-container {
   display: grid;
@@ -150,8 +150,8 @@ button:hover {
   cursor: not-allowed;
 }
 .styled-link {
-  text-decoration: none;
   color: inherit;
+  text-decoration: none;
   transition: all 0.3s ease;
 }
 .styled-link:hover {
@@ -164,7 +164,7 @@ button:hover {
   box-shadow: 0px 0px 8px var(--primary-color);
   border-radius: 0.5rem;
   padding: 1rem 1rem;
-  color: #1a1a26;
+  color: #000;
   transition: all;
   transition-duration: 250ms;
   text-decoration: none;
